--- a/EnglishTutorAI/ClientApp/src/index.html
+++ b/EnglishTutorAI/ClientApp/src/index.html
@@ -1,10 +1,13 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+  <meta charset="utf-8">
+  <title>English AI Tutor</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <my-app>Loading...</my-app>
+  <app-root></app-root>
 </body>
 </html>
